--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: A (mainly technical) blog by Mike Simmonds
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a blog version of my own development notes. Some of this may not make sense to 
+  the casual reader - you have been warned
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://mikesimmonds.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: _mikesimmonds
+github_username:  mikesimmonds
 
 # Build settings
 markdown: kramdown
